# exchange-rate-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  bot_webhook.py  compose.yml  demo.py  deploy.sh  docker-entrypoint.sh  example.env  health_check.py  main.py  main_webhook.py  notify_startup.py  pyproject.toml  requirements.txt  run.sh  test_bot.py  test_exchange_service.py
.windsurf/: config.json  prompts.md  rules.md
.windsurf/rules/: general-rules.md  prompts.md
.windsurf/skills/domain-rules/: SKILL.md
.windsurf/skills/write-run-tests/: SKILL.md
alembic/: env.py
alembic/versions/: 45668e933aeb_add_unique_constraint_to_chat_id.py  53d006478519_initial_migration_institution_and_.py  d4e6357d2aa2_add_telegramnotificationsubscription_.py
apps/: __init__.py  daily_notifier_app.py  scheduler_app.py  webhook_app.py
src/: banguat_simple.py  config.py  logging_config.py
src/bot/: __init__.py  telegram_bot.py
src/database/: __init__.py  base.py  models.py  session.py
src/handlers/: bot_handlers.py
src/infrastructure/: __init__.py  telegram_bot.py  telegram_bot_client.py  telegram_bot_webhook.py  telegram_notification.py  telegram_webhook_schemas.py
src/presentation/: __init__.py  template_renderer.py
src/repositories/: __init__.py  notification_subscription.py
src/resources/soap_templates/: exchange_rate_daily.xml
src/scrapers/: banguat_client.py  banrural_scraper.py  base_scraper.py  nexa_scraper.py
src/scrappers/: nexa_scraper.py
src/services/: __init__.py  bot_service.py  daily_notification_service.py  exchange_rate_service.py  message_formatter.py  subscription_service.py  telegram_bot.py
src/utils/: __init__.py  templates.py  tz_utils.py  url_utils.py
templates/messages/: daily_notification.html  errors.html  help.html  loading.html  ping.html  rates.html  start.html  subscription.html
tests/: conftest.py
tests/unit/test_utils/: test_url_utils.py
