[project]
name = "exchange-rate-bot"
version = "0.1.0"
description = "Telegram bot for exchange rate conversions with async architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15.0",
    "aiohttp>=3.10.0",
    "lxml>=5.0.0",
    "aiofiles>=24.1.0",
    "beautifulsoup4>=4.13.5",
    "brotli>=1.1.0",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
    "aiosqlite>=0.20.0",
    "alembic>=1.16.5",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
reportUnusedFunction = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers"]
asyncio_mode = "auto"
